# Computer-Graphics-for-Games-F25

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
hw2/: basics.cpp  main.cpp
include/glad/: glad.h
include/imgui/: imgui_impl_opengl3_loader.h
src/: basics.cpp  glad.c  main.cpp
src/resources/: fragShader.frag  vertShader.vert
